# researchers-night

./: NDS on the objs selected by the user  README.md  UI_cars 2.py  UI_cars.py  UI_phone.py  UIsimple.py  Untitled.ipynb  app.py  index.py  pyproject.toml
apps/: UI_phone_csv.py  UI_phone_mcdm.py  UI_phone_traditional.py
data/: Phone_dataset.csv  Phone_dataset_new.csv  Phone_details.csv  car_data_processed.csv  car_data_v2_processed.csv  car_details_v2_processed.csv  node_data.csv
old experiments/: UI.py  UI_cars 2.py  UI_cars.py  UI_phone.py  app.py
