[tool.poetry]
name = "researchers-night"
version = "0.1.0"
description = "Apps to promote the optimization group in the researcher's night event"
authors = ["Bhupinder Singh Saini"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.2.0"
plotly = "^5.22.0"
dash = "^2.17.0"
xlrd = "^2.0.0"
Flask-Caching = "^1.8.0"
scikit-learn = "^1.4.0"
dash-bootstrap-components = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
